--- a/Documentazione/main.tex
+++ b/Documentazione/main.tex
@@ -55,27 +55,115 @@ Matricola: 844936
 \tableofcontents
 
 \newpage
+\section{Introduzione}
 L'obiettivo di questo progetto è quello di sviluppare un'applicazione per i produttori di birra artigianale.\\
 L'applicazione permette la registrazione degli utenti per salvare le proprie ricette, segnare l'elenco dei prodotti disponibili e la propria attrezzatura.\\
 In questo modo l'utente potrà effettuare il login con le proprie credenziali per effettuare diverse operazioni:
 \begin{itemize}
-    \item modificare il proprio account o eliminarlo
-    \item aggiungere una nuova ricetta (con prodotti, attrezzatura necessaria, preparazione e note) o eliminarne una dalla lista delle ricette
-    \item modificare una ricetta (ad esempio aggiornare le note)
-    \item aggiungere, rimuovere o modificare un attrezzo dalla lista delle attrezzature
-    \item aggiungere o rimuovere un prodotto alla lista dei prodotti
-    \item modificare un prodotto (ad esempio la quantità dopo aver fatto la spesa)
-    \item consultare la lista della spesa che contiene tutti i prodotti utilizzati e le loro quantità, avrà anche la possibilità di esportare questa lista per modificarla a piacimento
-    \item scegliere la ricetta della birra da preparare ed indicarne la quantità, una volta selezionato questo gli ingredienti utilizzati saranno aggiunti alla lista della spesa
-    \item usare la funzionalità "Che birra faccio?" che mostrerà la ricetta che massimizza l'utilizzo degli ingredienti disponibili
+    \item modificare il proprio account o eliminarlo;
+    \item aggiungere una nuova ricetta (con prodotti, attrezzatura necessaria, preparazione e note) o eliminarne una dalla lista delle ricette;
+    \item modificare una ricetta (ad esempio aggiornare le note);
+    \item aggiungere, rimuovere o modificare un attrezzo dalla lista delle attrezzature;
+    \item aggiungere o rimuovere un prodotto alla lista dei prodotti;
+    \item modificare un prodotto (ad esempio la quantità dopo aver fatto la spesa);
+    \item consultare la lista della spesa che contiene tutti i prodotti utilizzati e le loro quantità, avrà anche la possibilità di esportare questa lista per modificarla a piacimento;
+    \item scegliere la ricetta della birra da preparare ed indicarne la quantità, una volta selezionato questo gli ingredienti utilizzati saranno aggiunti alla lista della spesa;
+    \item usare la funzionalità "Che birra faccio?" che mostrerà la ricetta che massimizza l'utilizzo degli ingredienti disponibili.
 \end{itemize}
 
 \newpage
+
+\section{Avvio}
+Per utilizzare questa applicazione non sono necessari particolari pre-requisiti, è sufficiente disporre di un computer.\\
+Per avviare l'applicazione è necessario:
+\begin{enumerate}
+    \item cosa
+    \item altra cosa
+    \item altra altra cosa
+\end{enumerate}
+
+\section{Funzionamento}
+\subsection{Registrazione}
+All'avvio dell'applicazione l'utente si troverà davanti una finestra così strutturata:\\\\
+\includegraphics[scale=0.30]{Immagini/form/Form Login.jpg}
+\\Per poter usare l'applicazione è necessario avere un account, quindi come primo passo l'utente dovrà premere sul bottone "CREA ACCOUNT":\\\\
+\includegraphics[scale=0.30]{Immagini/form/Form Registrazione.jpg}
+\\Si troverà davanti a questa finestra e dopo aver compilato i campi procederà con l'iscrizione tramite il bottone "ISCRIVIMI"
+Dopo di che verrà riportato alla schermata iniziale.
+\newpage
+\subsection{Login}
+All'avvio dell'applicazione l'utente, già registrato, si troverà davanti la schermata mostrata nell'immagine1, potrà compilare i campi con email e password relativi al proprio account e premere sul bottone "LOGIN", si aprirà quindi la finestra del menu:\\\\
+\includegraphics[scale=0.30]{Immagini/form/Form Menu.jpg}
+\\e avrà la possibilità di scegliere tra diverse operazioni da compiere.
+\subsection{Profilo}
+Una volta all'interno dell'applicazione, dalla finestra del menù, l'utente potrà selezionare il bottone "PROFILO"\\\\
+\includegraphics[scale=0.30]{Immagini/form/Form GestioneUtente.jpg}
+\\Da questa finestra:
+\begin{itemize}
+    \item avrà la possibilità di modificare la propria password spuntando il box "MODIFICA PASSWORD" e premendo il bottone "SALVA MODIFICHE";
+    \item potrà procedere con l'eliminazione del proprio account e di tutti i dati relativo ad esso spuntando il box "CONFERMA ELIMINAZIONE" e premendo il bottone "ELIMINA ACCOUNT".
+\end{itemize} 
+Al termine di queste operazioni l'utente verrà riportato alla schermata iniziale (immagine1)
+\newpage
+\subsection{Prodotti}
+Una volta all'interno dell'applicazione, dalla finestra del menù, l'utente potrà premere il bottone "PRODOTTI"\\\\
+\includegraphics[scale=0.30]{Immagini/form/Form GestioneProdotti.jpg}
+\\Da questa finestra potrà:
+\begin{itemize}
+    \item selezionare un prodotto presente nella lista schiacciandolo\\\\
+    \includegraphics[scale=0.30]{Immagini/form/Form ModificaProd.jpg}
+    \\Da questa finestra potrà scegliere:
+        \subitem - di modificarne la quantità, scegliendo se inserire manualmente il numero oppure utilizzare le freccine, e premendo il bottone "SALVA MODIFICHE" salvare le modifiche apportate;
+        \subitem - di eliminare il prodotto tramite il bottone "ELIMINA PRODOTTO".
+    \item premere il bottone "AGGIUNGI NUOVO PRODOTTO"\\\\
+    \includegraphics[scale=0.30]{Immagini/form/Form AggiuntaProd.jpg}
+    \\Da questa finestra potrà inserire nome e quantità relativi al prodotto e tramite il bottone "AGGIUNGI!" aggiungerlo al database.
+\end{itemize}
+\newpage
+\subsection{Ricette}
+Una volta all'interno dell'applicazione, dalla finestra del menù, l'utente potrà premere il bottone "RICETTE"\\\\
+\includegraphics[scale=0.30]{Immagini/form/Form GestioneRicette.jpg}
+\\Da questa finestra potrà:
+\begin{itemize}
+    \item selezionare una ricetta presente nella lista schiacciandolo\\\\
+    \includegraphics[scale=0.30]{Immagini/form/Form Ricetta.jpg}
+    \\Da questa finestra potrà scegliere:
+        \subitem - di modificarne le note scrivendo nello spazio apposito e premendo il bottone "SALVA MODIFICHE";
+        \subitem - di eliminare la ricetta tramite il bottone "ELIMINA PRODOTTO";
+        \subitem - di preparare una birra inserendo nello spazio apposito il numero di litri (manualmente o tramite le freccine) e premendo "PREPARA QUESTA BIRRA"
+    \item premere il bottone "AGGIUNGI NUOVA RICETTA"\\\\
+    \includegraphics[scale=0.30]{Immagini/form/Form AggiungiRic.jpg}
+    \\Da questa finestra potrà inserire nome, preparazione, attrezzi e premere "CONTINUA" per inserire i prodotti relativi alla ricetta salvandoli tramite il bottone "SALVA PRODOTTO"\\
+    \includegraphics[scale=0.30]{Immagini/form/Form AggiungiProdottiRicetta.jpg}
+    \\e per terminare l'inserimento dei prodotti e ultimare il salvataggio della ricetta premerà "TERMINA".
+\end{itemize}
+\subsection{Attrezzatura}
+Una volta all'interno dell'applicazione, dalla finestra del menù, l'utente potrà premere il bottone "ATTREZZATURA"\\\\
+\includegraphics[scale=0.30]{Immagini/form/Form GestioneAttrezzatura.jpg}
+\\Da questa finestra potrà:
+\begin{itemize}
+    \item selezionare un attrezzo presente nella lista schiacciandolo\\\\
+    \includegraphics[scale=0.30]{Immagini/form/Form ModificaAtt.jpg}
+    \\Da questa finestra potrà scegliere:
+        \subitem - di modificarne la quantità, scegliendo se inserire manualmente il numero oppure utilizzare le freccine, e premendo il bottone "SALVA MODIFICHE" salvare le modifiche apportate;
+        \subitem - di eliminare il prodotto tramite il bottone "ELIMINA ATTREZZO".
+    \item premere il bottone "AGGIUNGI NUOVO ATTREZZO"\\
+    \includegraphics[scale=0.30]{Immagini/form/Form AggiuntaAtt.jpg}
+    \\da questa finestra potrà inserire nome e quantità relativi all'attrezzo e tramite il bottone "AGGIUNGI!" aggiungerlo al database.
+\end{itemize}
+\subsection{Lista della spesa}
+Una volta all'interno dell'applicazione, dalla finestra del menù, l'utente potrà premere il bottone "LISTA DELLA SPESA"\\\\\
+\includegraphics[scale=0.30]{Immagini/form/Form ListaSpesa.jpg}
+\\Da questa finestra potrà visualizzare la lista dei prodotti mancanti con le relative quantità e cancellarla tramite il bottone "HO FATTO LA SPESA".
+\subsection{"Che birra faccio oggi?"}
+Una volta all'interno dell'applicazione, dalla finestra del menù, l'utente potrà premere il bottone "CHE BIRRA FACCIO OGGI?" che gli restituirà una finestra con il nome della birra la quantità massima che è possibile preparare. La birra visualizzata sarà quella di cui è possibile preparare la maggior quantità considerando i prodotti presenti nel database.
+
+\newpage
 \section{Analisi}
-\subsection{Casi d'uso}
-Abbiamo identificato 8 casi d'uso che di seguito abbiamo illustrato nella forma dettagliata.
-\vphantom{}
 \subsection{Diagramma dei casi d'uso}
+Abbiamo identificato otto casi d'uso che di seguito abbiamo illustrato nella forma dettagliata.
+\vphantom{}
+\subsection{Casi d'uso}
 \vphantom{}
 \includegraphics[scale=0.65]{Immagini/Use Case Diagram_Brew Day!.png}
 \vphantom{}
@@ -103,7 +191,6 @@ Abbiamo identificato 8 casi d'uso che di seguito abbiamo illustrato nella forma 
     VARIE & Nessuna\\\bottomrule
 \end{longtable}
 \vphantom{}
-\newpage
 \subsubsection{Registrazione}
 \begin{longtable}{p{6cm}p{7cm}}\toprule
     NOME & Registrazione\\\midrule
@@ -127,8 +214,8 @@ Abbiamo identificato 8 casi d'uso che di seguito abbiamo illustrato nella forma 
     FREQUENZA DI RIPETIZIONE & Una volta per utente\\\midrule
     VARIE & Nessuna\\\bottomrule                                
 \end{longtable}
-\vphantom{}
 \newpage
+\vphantom{}
 \subsubsection{gestioneUtente}
 \begin{longtable}{p{6cm}p{7cm}}\toprule
     NOME & gestioneUtente\\\midrule
@@ -157,6 +244,7 @@ Abbiamo identificato 8 casi d'uso che di seguito abbiamo illustrato nella forma 
     FREQUENZA DI RIPETIZIONE & Più volte al giorno\\\midrule
     VARIE & Nessuna\\\bottomrule
 \end{longtable}
+\vphantom{}
 \newpage
 \subsubsection{gestioneProdotto}
 \begin{longtable}{p{6cm}p{7cm}}\toprule
@@ -171,29 +259,18 @@ Abbiamo identificato 8 casi d'uso che di seguito abbiamo illustrato nella forma 
     & 1) l’utente seleziona la voce prodotti\\
     SUCCESSO & 2) il sistema restituisce la lista dei prodotti\\
     & 3.1) l’utente seleziona “aggiungi prodotto”\\
-    & 3.2) l’utente seleziona “modifica prodotto”\\
-    & 3.3) l’utente seleziona “elimina prodotto”\\
+    & 3.2) l’utente seleziona il prodotto desiderato dalla lista\\
     & 4.1) il sistema restituisce la schermata per aggiungere il prodotto\\
-    & 4.2) il sistema restituisce la schermata di ricerca del prodotto da modificare\\
-    & 4.3) il sistema restituisce la schermata di ricerca del prodotto da eliminare\\
-    & 5.1) l’utente inserisce i dati del prodotto e preme “salva”\\
-    & 5.2) l’utente inserisce i dati del prodotto e preme “cerca”\\
-    & 5.3) l’utente inserisce i dati del prodotto e preme “cerca”\\
-    & 6.1) il sistema salva il nuovo prodotto nel database e restituisce un messaggio di conferma\\
-    & 6.2) il sistema restituisce i prodotti che coincidono con la ricerca\\
-    & 6.3) il sistema restituisce i prodotti che coincidono con la ricerca\\
-    & 7.2) l’utente seleziona il prodotto desiderato e preme su “modifica”\\
-    & 7.3) l’utente seleziona il prodotto desiderato e preme su “elimina”\\
-    & 8.2) il sistema visualizza i dati modificabili relativi al prodotto selezionato\\
-    & 8.3) il sistema visualizza una schermata di conferma eliminazione\\
-    & 9.2) l’utente modifica i dati che desidera e preme su “salva”\\
-    & 9.3) l’utente preme su “elimina”\\
-    & 10.2) il sistema salva il nuovi dati nel database e restituisce un messaggio di conferma\\
-    & 10.3) il sistema elimina i dati relativi al prodotto dal database e restituisce un messaggio di conferma\\\\\\\\\midrule
+    & 4.2) il sistema restituisce la schermata del prodotto\\
+    & 5.1) l’utente inserisce i dati del prodotto e salva\\
+    & 5.2) l’utente modifica i dati che desidera e preme su “salva”\\
+    & 5.3) l’utente preme su “elimina”\\
+    & 6.2) il sistema salva i nuovi dati nel database e restituisce un messaggio di conferma\\
+    & 6.3) il sistema elimina i dati relativi al prodotto dal database e restituisce un messaggio di conferma\\\midrule
     ESTENSIONI
-    & 6.1.1) se il prodotto non viene salvato correttamente, il sistema restituisce un messaggio di errore\\
-    & 10.2.1) se il prodotto non viene salvato correttamente, il sistema restituisce un messaggio di errore\\
-    & 10.3.1) se il prodotto non viene eliminato correttamente, il sistema restituisce un messaggio di errore \\\midrule
+    & 5.1.1) se il prodotto non viene salvato correttamente, il sistema restituisce un messaggio di errore\\
+    & 6.2.1) se il prodotto non viene salvato correttamente, il sistema restituisce un messaggio di errore\\
+    & 6.3.1) se il prodotto non viene eliminato correttamente, il sistema restituisce un messaggio di errore \\\midrule
     REQUISITI SPECIALI & Nessuno\\\midrule
     ELENCO VARIABILI TECNOLOGICHE & Database\\\midrule
     FREQUENZA DI RIPETIZIONE & Più volte al giorno\\\midrule
@@ -214,21 +291,19 @@ Abbiamo identificato 8 casi d'uso che di seguito abbiamo illustrato nella forma 
     SCENARIO PRINCIPALE DI
     & 1) l’utente seleziona la voce attrezzatura\\
     SUCCESSO & 2) il sistema restituisce la lista dell’attrezzatura\\
-    & 3.1) l’utente seleziona “aggiungi attrezzatura”\\
-    & 3.2) l’utente seleziona “elimina attrezzatura”\\
-    & 4.1) il sistema restituisce la schermata per aggiungere un attrezzo\\
-    & 4.2) il sistema restituisce la schermata di ricerca dell’attrezzo da eliminare\\
-    & 5.1) l’utente inserisce i dati dell’attrezzo e preme “salva”\\
-    & 5.2) l’utente inserisce i dati dell’attrezzo e preme “cerca”\\
-    & 6.1) il sistema salva il nuovo attrezzo ne database e restituisce un messaggio di conferma\\
-    & 6.2) il sistema restituisce gli attrezzi che coincidono con la ricerca\\
-    & 7.2) l’utente seleziona l’attrezzo desiderato e preme su “elimina”\\
-    & 8.2) il sistema visualizza una schermata di conferma eliminazione\\
-    & 9.2) l’utente preme su “elimina”\\
-    & 10.2) il sistema elimina i dati relativi al prodotto dal database e restituisce un messaggio di conferma\\\midrule
+    & 3.1) l’utente seleziona “aggiungi attrezzo”\\
+    & 3.2) l’utente seleziona l'attrezzo desiderato dalla lista\\
+    & 4.1) il sistema restituisce la schermata per aggiungere l'attrezzo\\
+    & 4.2) il sistema restituisce la schermata dell'attrezzo\\
+    & 5.1) l’utente inserisce i dati dell'attrezzo e salva\\
+    & 5.2) l’utente modifica i dati che desidera e preme su “salva”\\
+    & 5.3) l’utente preme su “elimina”\\
+    & 6.2) il sistema salva i nuovi dati nel database e restituisce un messaggio di conferma\\
+    & 6.3) il sistema elimina i dati relativi all'attrezzo dal database e restituisce un messaggio di conferma\\\midrule
     ESTENSIONI
-    & 6.1.1) se l’attrezzo non viene salvato correttamente, il sistema restituisce un messaggio di errore\\
-    & 10.2.1) se l’attrezzo non viene eliminato correttamente, il sistema restituisce un messaggio di errore\\\midrule
+    & 5.1.1) se l'attrezzo non viene salvato correttamente, il sistema restituisce un messaggio di errore\\
+    & 6.2.1) se l'attrezzo non viene salvato correttamente, il sistema restituisce un messaggio di errore\\
+    & 6.3.1) se l'attrezzo non viene eliminato correttamente, il sistema restituisce un messaggio di errore \\\midrule
     REQUISITI SPECIALI & Nessuno\\\midrule
     ELENCO VARIABILI TECNOLOGICHE & Database\\\midrule
     FREQUENZA DI RIPETIZIONE & Più volte al giorno\\\midrule
@@ -249,36 +324,21 @@ Abbiamo identificato 8 casi d'uso che di seguito abbiamo illustrato nella forma 
     & 1) l’utente seleziona la voce ricette\\
     SUCCESSO & 2) il sistema restituisce la lista delle ricette\\
     & 3.1) l’utente seleziona “aggiungi ricetta”\\
-    & 3.2) l’utente seleziona “modifica ricetta”\\
-    & 3.3) l’utente seleziona “elimina ricetta”\\
-    & 3.4) l'utente seleziona "prepara ricetta"\\
+    & 3.2) l’utente seleziona la ricetta desiderata dalla lista\\
     & 4.1) il sistema restituisce la schermata per aggiungere la ricetta\\
-    & 4.2) il sistema restituisce la schermata di ricerca della ricetta da modificare\\
-    & 4.3) il sistema restituisce la schermata di ricerca della ricetta da eliminare\\
-    & 4.4) il sistema visualizza la preparazione della ricetta (ingredienti, procedimento)\\
-    & 5.1) l’utente inserisce i dati della ricetta e preme “salva”\\
-    & 5.2) l’utente inserisce i dati della ricetta e preme “cerca”\\
-    & 5.3) l’utente inserisce i dati della ricetta e preme “cerca”\\
-    & 5.4) l'utente preme su "prepara"\\
-    & 6.1) il sistema salva la nuova ricetta nel database e restituisce un messaggio di conferma\\
-    & 6.2) il sistema restituisce le ricette che coincidono con la ricerca\\
-    & 6.3) il sistema restituisce le ricette che coincidono con la ricerca\\
-    & 6.4) il sistema chiede quanti litri preparare\\
-    & 7.2) l’utente seleziona la ricetta desiderata e preme su “modifica”\\
-    & 7.3) l’utente seleziona la ricetta desiderata e preme su “elimina”\\
-    & 7.4) l'utente inserisce la quantità di birra da preparare e preme su "ok"\\
-    & 8.2) il sistema visualizza i dati modificabili relativi alla ricetta selezionata\\
-    & 8.3) il sistema visualizza una schermata di conferma eliminazione\\
-    & 8.4) il sistema sposta dalla lista dei prodotti alla lista della spesa la quantità di prodotti utilizzata per la preparazione della ricetta\\
-    & 9.2) l’utente modifica i dati che desidera e preme su “salva”\\
-    & 9.3) l’utente preme su “elimina”\\
-    & 10.2) il sistema salva il nuovi dati nel database e restituisce un messaggio di conferma\\
-    & 10.3) il sistema elimina i dati relativi alla ricetta dal database e restituisce un messaggio di conferma\\\midrule
+    & 4.2) il sistema restituisce la schermata della ricetta\\
+    & 5.1) l’utente inserisce i dati della ricetta e salva\\
+    & 5.2) l’utente modifica i dati che desidera e preme su “salva”\\
+    & 5.3) l’utente preme su “elimina ricetta”\\
+    & 5.4) l'utente seleziona la quantità da produrre e preme su "prepara birra"\\
+    & 6.2) il sistema salva i nuovi dati nel database e restituisce un messaggio di conferma\\
+    & 6.3) il sistema elimina i dati relativi alla ricetta dal database e restituisce un messaggio di conferma\\
+    & 6.4) il sistema sposta dalla lista dei prodotti alla lista della spesa la quantità di prodotti utilizzata per la preparazione della ricetta\\\midrule
     ESTENSIONI
-    & 6.1.1) se la ricetta non viene salvata correttamente, il sistema restituisce un messaggio di errore\\
-    & 10.2.1) se la ricetta non viene salvata correttamente, il sistema restituisce un messaggio di errore\\
-    & 10.3.1) se la ricetta non viene eliminata correttamente, il sistema restituisce un messaggio di errore\\
-    & 8.4.1) se non ho le quantità sufficienti di prodotti necessari alla preparazione, il sistema restituisce un messaggio di errore\\\midrule
+    & 5.1.1) se la ricetta non viene salvato correttamente, il sistema restituisce un messaggio di errore\\
+    & 6.2.1) se la ricetta non viene salvata correttamente, il sistema restituisce un messaggio di errore\\
+    & 6.3.1) se la ricetta non viene eliminato correttamente, il sistema restituisce un messaggio di errore \\
+    & 6.4.1) se non ho le quantità sufficienti di prodotti necessari alla preparazione, il sistema restituisce un messaggio di errore\\\midrule
     REQUISITI SPECIALI & Nessuno\\\midrule
     ELENCO VARIABILI TECNOLOGICHE & Database\\\midrule
     FREQUENZA DI RIPETIZIONE & Più volte al giorno\\\midrule
@@ -297,11 +357,9 @@ Abbiamo identificato 8 casi d'uso che di seguito abbiamo illustrato nella forma 
     SCENARIO PRINCIPALE DI
     & 1) l'utente preme su "lista della spesa"\\
     SUCCESSO & 2) il sistema restituisce la lista della spesa\\
-    & 3) il sistema visualizza la richiesta di esportare la lista su un editor di testo\\
-    & 4) l’utente preme su “ok”\\\midrule
-    ESTENSIONI
-    & 4.1) se l’utente non vuole esportare la lista clicca su “indietro”\\
-    & 4.2) il sistema visualizza la schermata precedente\\\midrule
+    & 3) l’utente preme su “ho fatto la spesa”\\
+    & 4) il sistema cancella la lista della spesa\\\midrule
+    ESTENSIONI & Nessuna\\\midrule
     REQUISITI SPECIALI & Nessuno\\\midrule
     ELENCO VARIABILI TECNOLOGICHE & Database\\\midrule
     FREQUENZA DI RIPETIZIONE & Più volte al giorno\\\midrule
@@ -322,72 +380,89 @@ Abbiamo identificato 8 casi d'uso che di seguito abbiamo illustrato nella forma 
     SCENARIO PRINCIPALE DI
     & 1) l’utente preme su “Che birra faccio?”\\
     SUCCESSO & 2) il sistema calcola che birra fare in base alla quantità di prodotti presenti sul database\\
-    & 3) il sistema restituisce la birra che massimizza l’uso dei prodotti disponibili e chiede conferma sulla scelta\\
-    & 4) l'utente seleziona "prepara ricetta"\\
-    & 5) il sistema visualizza la preparazione della ricetta (ingredienti, procedimento)\\
-    & 6) l'utente preme su "prepara"\\
-    & 7) il sistema visualizza una schermata per inserire la quantità di birra da preparare\\
-    & 8) l'utente inserisce la quantità di birra da preparare e preme su "ok"\\
-    & 9) il sistema sposta dalla lista dei prodotti alla lista della spesa la quantità di prodotti utilizzata per la preparazione della ricetta\\\midrule
-    ESTENSIONI & Nessuna\\\midrule
+    & 3) il sistema restituisce un messaggio con il nome della ricetta e il numero massimo di litri che si possono produrre\\
+    ESTENSIONI
+    & 3.1) se non ho abbastanza prodotti per produrre alcuna ricetta presente nel database il sistema restituisce un messaggio di errore\\\midrule
     REQUISITI SPECIALI & Nessuno\\\midrule
     ELENCO VARIABILI TECNOLOGICHE & Database\\\midrule
     FREQUENZA DI RIPETIZIONE & Più volte al giorno\\\midrule
-    VARIE & Nessuna\\\bottomrule
+    VARIE & Nessuna \\\bottomrule
 \end{longtable}
 
 %%\begin{tabular}[c]{@{}l@{}} \end{tabular}\\\midrule
 \newpage
-\section{Diagramma di sequenza}
+\subsection{Diagramma delle classi a livello di Dominio}
+In questo diagramma sono presenti le classi che abbiamo implementato con i relativi attributi e viene mostrato come lavorano insieme.
+\subsection{Diagramma delle classi a livello di Progettazione}
+In questo diagramma sono presenti tutte le classi che abbiamo implementato con i relativi attributi e metodi. Viene mostrato come e per quali operazioni le classi comunicano tra loro.
+\subsection{Diagramma dell'architettura software}
+In questo diagramma viene mostrata l'architettura dell'applicazione che abbiamo sviluppato.
+L'architettura richiama il modello MVC.
+\begin{itemize}
+    \item Nel Model sono comprese le classi che strutturano l'applicazione, a partire dall'Utente, che poi avrà collegato a sè i vari prodotti, attrezzi, ricette con le relative liste di prodotti e attrezzi presenti in esse.
+    \item Nel View sono comprese tutte le classi che vanno a formare i form che costituiscono l'interfaccia per l'utente che utilizzera l'applicazione.
+    \item Nel Controller è presente la classe che esegue tutti gli scambi tra View e il database esterno che contiene i dati.
+\end{itemize}
+
+\newpage
+\subsection{Diagramma di sequenza}
 In questo diagramma abbiamo mostrato l'intero funzionamento dell'applicazione.\\
 Si parte dalla fase di registrazione in cui si inserisce email e password, queste credenziali vengono, dopo i dovuti controlli, salvati nel database. Questo passaggio permette di creare un account per salvare i prodotti, gli attrezzi e le ricette appartenenti a quella persona.\\
 Successivamente ci sarà la fase di login, in cui inserendo le credenziali nel form apposito si potrà accedere al menù principale dell'applicazione.\\
 Una volta entrati nel menù è possibile svolgere diverse operazioni, manipolando diversi campi:
 \begin{itemize}
     \item Profilo:
-        \subitem - modificare il proprio profilo cambiando email e/o password
-        \subitem - eliminare il proprio account
+        \subitem - modificare il proprio profilo cambiando la password;
+        \subitem - eliminare il proprio account.
     \item Prodotti:
-        \subitem - aggiungere un nuovo prodotto con tutti i dati relativi ad esso (nome e quantità)
-        \subitem - modificare la quantità di un prodotto esistente
-        \subitem - eliminare un prodotto esistente
+        \subitem - aggiungere un nuovo prodotto con tutti i dati relativi ad esso (nome e quantità);
+        \subitem - modificare la quantità di un prodotto esistente;
+        \subitem - eliminare un prodotto esistente.
     \item Attrezzatura:
-        \subitem - aggiungere un nuovo attrezzo con tutti i dati relativi ad esso (nome e capacità)
+        \subitem - aggiungere un nuovo attrezzo con tutti i dati relativi ad esso (nome e capacità);
         \subitem - modificare la capacità di un attrezzo esistente
-        \subitem - eliminare un attrezzo esistente
+        \subitem - eliminare un attrezzo esistente.\\
+        Abbiamo assunto che l'attrezzatura sia puramente a scopo illustrativo, questa sezione è solo per tenere traccia degli attrezzi che si possiedono, non viene considerata nel momento in cui si fanno i controlli per la preparazione di una ricetta o nella funzionalità "Che Birra Faccio Oggi?".
     \item Ricette:
-        \subitem - aggiungere una nuova ricetta con tutti i dati relativi ad essa (nome, elenco prodotti, elenco attrezzi, preparazione e note)
-        \subitem - modificare una ricetta esistente, i campi di prodotti, attrezzi, preparazione e note
-        \subitem - eliminare una ricetta esistente
-        \subitem - preparare una ricetta inserendo la quantità
-    \item CheBirraFaccio:
-        \subitem è una funzionalità speciale che permette di farsi consigliare una ricetta da preparare che massimizzi l'utilizzo dei prodotti presenti nella dispensa, dopo aver selezionato questa voce si avrà la possibilità di scegliere se prepararla inserendo la quantità oppure non preparala
+        \subitem - aggiungere una nuova ricetta con tutti i dati relativi ad essa (nome, elenco prodotti, elenco attrezzi, preparazione e note);
+        \subitem - modificare le note di una ricetta esistente;
+        \subitem - eliminare una ricetta esistente;
+        \subitem - preparare una ricetta inserendo la quantità.\\
+        Abbiamo assunto che la modifica di una ricetta esistenza sia valida solo per le note, in quanto crediamo che una volta inserita la ricetta questa non vari nel tempo, mentre è utile poter modificare le note riportano un'informazione personale.
+    \item "Che Birra Faccio Oggi?":
+        \subitem è una funzionalità speciale che permette di farsi consigliare una ricetta da preparare. La ricetta ottenuta grazie a questa funzionalità è quella di cui si possono più fare più litri con i prodotti presenti in quel momento nella dispensa.\\
+        Abbiamo assunto che questa funzionalità restituisca semplicemente un consiglio su quale birra produrre, mostrando nome e quantità massima supportata dai prodotti presenti in dispensa, poi sarà l'utente a scegliere quale ricetta e quanta prepararne.
     \item Lista della spesa:
-        \subitem è una funzionalità che permette di vedere quali prodotti mancano nella dispensa per poter preparare le varie ricette, una volta selezionata questa voce si visualizzerà la lista e si avrà la possibilità di esportarla su un editor di testo 
+        \subitem è una funzionalità che permette di vedere quali prodotti mancano nella dispensa per poter preparare le varie ricette, una volta selezionata questa voce si visualizzerà la lista e si avrà la possibilità di cancellarla una volta comprato i prodotti.\\
+        Abbiamo assunto che la lista della spesa venga solo visualizzata in modo che poi sia l'utente a scegliere cosa comprare e una volta fatta la spesa potrà cancellare la lista ed aggiornare autonomamente i prodotti.
 \end{itemize}
 \newpage
-\includegraphics[scale=0.30]{Immagini/Sequence Diagram_Brew Day!_1.png}
-\includegraphics[scale=0.30]{Immagini/Sequence Diagram_Brew Day!_2.png}
-\includegraphics[scale=0.30]{Immagini/Sequence Diagram_Brew Day!_3.png}
-\includegraphics[scale=0.30]{Immagini/Sequence Diagram_Brew Day!_4.png}
-\includegraphics[scale=0.30]{Immagini/Sequence Diagram_Brew Day!_5.png}
-\includegraphics[scale=0.30]{Immagini/Sequence Diagram_Brew Day!_6.png}
+% \includegraphics[scale=0.30]{Immagini/Sequence Diagram_Brew Day!_1.png}
+
 \newpage
-\section{Pattern}
-\begin{comment}
-\subsection{Pattern Grasp}
-\subsubsection{Information Expert}
-\subsubsection{Creator}
-\subsubsection{Controller}
-\subsubsection{Low Coupling}
-\subsubsection{High Coesion}
-\subsubsection{Protected Variations}
-\end{comment}
-\subsection{Singleton}
-\subsection{Data Mapper}
-\begin{comment}
-\subsection{Identity Field}
-\subsection{Association Table Mapping}
-\end{comment}
+
+\subsection{Diagramma di sequenza di progettazione}
+Questo diagramma mostra in modo più specifico il funzionamento di una funzionalità presente nell'applicazione.
+\subsection{Diagramma di stati}
+Questo diagramma mostra 
+\subsection{Diagramma di attività}
+Questo diagramma mostra 
+\subsection{Diagramma EER}
+Questo diagramma rappresenta la struttura del database che abbiamo creato come appoggio alla nostra applicazione.
+
+\newpage
+
+\section{Progettazione}
+\subsection{Pattern}
+\subsubsection{Singleton}
+Questo pattern viene utilizzato dalla classe 'GestioneDB'. Questa classe ha il compito di svolgere tutte le operazioni che si interfacciano al database di supporto. Abbiamo introdotto questo pattern al fine di evitare errori di comunicazione, infatti è presente una sola classe mediatrice tra il database e le altre classi.
+\subsubsection{Data Mapper}
+Questo pattern viene utilizzato nella creazione delle classi che rappresentano gli oggetti manipolati nel database.
+Abbiamo rivisitato il suo utilizzo rendendolo più semplice togliendo uno step intermedio.
+\subsubsection{Identity Field}
+Questo pattern è presente in tutte le tabelle del database, ma viene utilizzato in modo particolare nelle funzionalità inerenti alla tabella Ricetta.
+La chiave primaria idRicetta viene utilizzata per richiamare i prodotti contenuti nella tabella 'prodricetta' per le funzionalità di preparazione di una ricetta e "Che birra faccio oggi?".
+\subsubsection{Association Table Mapping}
+Questo pattern viene utilizzato nella tabella 'prodricetta'. Questa è un'associazione molti a molti tra le tabelle 'ricetta' e 'prodotto'.
 
 \end{document}
