Aggiornata documentazione latex
aggiunti diagrammi

--- a/Documentazione/main.tex
+++ b/Documentazione/main.tex
@@ -442,13 +442,17 @@ Una volta entrati nel menù è possibile svolgere diverse operazioni, manipoland
 \newpage
 
 \subsection{Diagramma di sequenza di progettazione}
-Questo diagramma mostra in modo più specifico il funzionamento di una funzionalità presente nell'applicazione.
+Questo diagramma mostra in modo più specifico il funzionamento del caso d'uso gestioneRicette.\\\\\
+\includegraphics[scale=0.43]{Immagini/Sequence Diagram gestioneRicette.png}
 \subsection{Diagramma di stati}
-Questo diagramma mostra 
+Questo diagramma a stati mostra la funzionalità login.\\\\
+\includegraphics[scale=0.60]{Immagini/State Machine Diagram Login_Brew Day!.png}
 \subsection{Diagramma di attività}
-Questo diagramma mostra 
+Questo diagramma mostra mostra la funzionalità registrazione.\\\\
+\includegraphics[scale=0.50]{Immagini/Activity Diagram Registrazione_Brew Day!.png}
 \subsection{Diagramma EER}
-Questo diagramma rappresenta la struttura del database che abbiamo creato come appoggio alla nostra applicazione.
+Questo diagramma rappresenta la struttura del database che abbiamo creato come appoggio alla nostra applicazione.\\\\
+\includegraphics[scale=0.50]{Immagini/diagrammaER.PNG}
 
 \newpage
 
