--- a/Documentazione/main.tex
+++ b/Documentazione/main.tex
@@ -94,7 +94,6 @@ All'avvio dell'applicazione l'utente si troverà davanti una finestra così stru
 \includegraphics[scale=0.30]{Immagini/form/Form Registrazione.jpg}
 \\Si troverà davanti a questa finestra e dopo aver compilato i campi procederà con l'iscrizione tramite il bottone "ISCRIVIMI".
 Dopo di che verrà riportato alla schermata iniziale.
-\newpage
 \subsection{Login}
 All'avvio dell'applicazione l'utente, già registrato, si troverà davanti la schermata mostrata come prima figura, potrà compilare i campi con email e password relativi al proprio account e premere sul bottone "LOGIN", si aprirà quindi la finestra del menu:\\\\
 \includegraphics[scale=0.30]{Immagini/form/Form Menu.jpg}
@@ -107,7 +106,7 @@ Una volta all'interno dell'applicazione, dalla finestra del menù, l'utente potr
     \item avrà la possibilità di modificare la propria password spuntando il box "MODIFICA PASSWORD" e premendo il bottone "SALVA MODIFICHE";
     \item potrà procedere con l'eliminazione del proprio account e di tutti i dati relativo ad esso spuntando il box "CONFERMA ELIMINAZIONE" e premendo il bottone "ELIMINA ACCOUNT".
 \end{itemize} 
-Al termine di queste operazioni l'utente verrà riportato alla schermata iniziale (immagine1)
+Al termine di queste operazioni l'utente verrà riportato alla schermata iniziale.
 \newpage
 \subsection{Prodotti}
 Una volta all'interno dell'applicazione, dalla finestra del menù, l'utente potrà premere il bottone "PRODOTTI"\\\\
