Consegna versione definitiva

--- a/Documentazione/main.tex
+++ b/Documentazione/main.tex
@@ -464,7 +464,7 @@ Questo diagramma rappresenta la struttura del database creato come appoggio all'
 \section{Progettazione}
 \subsection{Design Principles}
 \subsubsection{ISP}
-E' stato applicato il design principles Interface Segregation di Martin Fowler. Lo scopo di questo è di creare diverse interfacce client al posto di usarne una unica, per questo motivo si è deciso di creare diversi windows form suddividendo le responsabilità.
+E' stato applicato il design principles Interface Segregation di Martin Fowler. Il suo scopo è di creare diverse interfacce client al posto di usarne una unica, per questo motivo si è deciso di creare diversi windows form suddividendo le responsabilità.
 \subsection{Pattern}
 \subsubsection{Singleton}
 Il pattern Singleton viene utilizzato dalla classe 'GestioneDB'. Questa classe ha il compito di svolgere tutte le operazioni che si interfacciano al database di supporto. Abbiamo introdotto questo pattern al fine di evitare errori di comunicazione, infatti è presente una sola classe mediatrice tra il database e le altre classi.\\\\
